--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>HelloWorld!</h1>
     <!-- script -->
 
     <script src="script.js"></script>
