--- a/index.html
+++ b/index.html
@@ -4,22 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template</title>
+    <title>Infinite Scroll</title>
     <link
       rel="icon"
       type="img/png"
       href="https://www.google.com/s2/u/0/favicons?domain=css-tricks.com"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>HelloWorld!</h1>
+    <!-- title -->
+    <h1>Unsplash API - Infinite Scroll</h1>
+    <!-- loader -->
+    <div class="loader" id="loader" hidden>
+      <img src="loader.svg" alt="loading" />
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1631002165161-27b558475f58?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1887&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1631002165161-27b558475f58?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1887&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1631002165161-27b558475f58?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1887&q=80"
+        alt=""
+      />
+    </div>
     <!-- script -->
-
     <script src="script.js"></script>
   </body>
 </html>
